@@ -195,5 +195,27 @@
 			
 			$this->assertEquals($decoded, $data);
 		}
+
+		public function testUtf16ConverterFilter()
+		{
+			$utf8 = file_get_contents(dirname(__FILE__).'/../main/data/unicode/utf8.txt');
+			$utf16 = file_get_contents(dirname(__FILE__).'/../main/data/unicode/utf16.txt');
+			$utf16be = file_get_contents(dirname(__FILE__).'/../main/data/unicode/utf16be.txt');
+
+			$this->assertEquals(
+				Utf16ConverterFilter::me()->apply($utf8),
+				$utf8
+			);
+
+			$this->assertEquals(
+				Utf16ConverterFilter::me()->apply($utf16),
+				$utf8
+			);
+
+			$this->assertEquals(
+				Utf16ConverterFilter::me()->apply($utf16be),
+				$utf8
+			);
+		}
 	}
 ?>
